<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="43dp"
            android:text="细胞名称："
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="批号/编号："
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="起始时间："
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="结束时间："
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="方案名称："
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <com.example.workcellsystem.histroyobservernote.CustomEditText
            android:id="@+id/editText5"
            style="@style/search_cell_custom_edit_text_style"
            android:layout_marginStart="122dp"
            android:layout_marginEnd="29dp"
            android:ems="9"
            android:hint="@string/cell_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <com.example.workcellsystem.histroyobservernote.CustomEditText
            android:id="@+id/editText6"
            style="@style/search_cell_custom_edit_text_style"
            android:ems="10"
            android:hint="@string/cell_number"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="@+id/editText5"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            tools:ignore="HardcodedText" />

        <com.example.workcellsystem.histroyobservernote.CustomEditText
            android:id="@+id/editText7"
            style="@style/search_cell_custom_edit_text_style"
            android:ems="10"
            android:hint="@string/cart_cultured"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <Button
            android:id="@+id/button6"
            android:layout_width="145dp"
            android:layout_height="38dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="60dp"
            android:background="#F8B16C"
            android:text="@string/btn_reset"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/button7"
            android:layout_width="145dp"
            android:layout_height="38dp"
            android:layout_marginEnd="36dp"
            android:background="#50A9D7"
            android:text="@string/btn_search"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/editText9"
            style="@style/search_cell_custom_edit_text_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/date"
            android:drawablePadding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/editText6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText6"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0">


        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/editText10"
            style="@style/search_cell_custom_edit_text_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/date"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/editText9"
            app:layout_constraintStart_toStartOf="@+id/editText9"
            app:layout_constraintTop_toTopOf="@+id/textView11">


        </com.google.android.material.textview.MaterialTextView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>